<resources>
    <string name="app_name">케키</string>
    <string name="kakao_native_key">e2abb1dfec5ae90f3ac6233769bfafec</string>
    <string name="kakao_key">kakaoe2abb1dfec5ae90f3ac6233769bfafec</string>
    <string name="social_login_info_naver_client_id">XZHzyRgQditsj_BuDAHZ</string>
    <string name="social_login_info_naver_client_secret">XEK5Tv83wP</string>
    <string name="social_login_info_naver_client_name">네이버아이디 로그인</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nickname">닉네임</string>
    <string name="home">홈</string>
    <string name="calendar">캘린더</string>
    <string name="search">검색</string>
    <string name="like">찜</string>
    <string name="mypage">마이페이지</string>
    <string name="splash_comment">특별한 날, 하나뿐인 특별한 케키와 함께</string>
    <string name="intro_comment">어서오세요, 케키입니다</string>
    <string name="btn_check">완료</string>
    <string name="btn_double_check">중복확인</string>
    <string name="login_customer">구매자</string>
    <string name="login_seller">판매자</string>
    <string name="tv_edit_Profile_title">프로필 설정</string>
    <string name="tv_edit_Profile_rule">한글, 영어, 숫자만 사용할 수 있어요. (최대 10자)</string>
    <string name="edit_rule_pass">사용 가능한 닉네임입니다</string>
    <string name="edit_rule_false">이미 사용 중인 닉네임입니다.</string>
    <string name="edit_rule_null">사용 가능한 닉네임을 입력해주세요.</string>
    <string name="edit_rule_wrong">닉네임 조건을 확인해주세요.</string>
    <string name="login_dialog_main">앱 접근권한 안내</string>
    <string name="login_dialog_sub">케키에서는 다음 권한들을 사용합니다.</string>
    <string name="login_dialog_text1">사진 및 저장공간(필수)</string>
    <string name="login_dialog_text2">사진, 파일 등 기기 내 저장된 파일 및 기기의 외부 저장소 사용</string>
    <string name="login_dialog_text3">휴대전화 권한 (선택)</string>
    <string name="login_dialog_text4">푸시 알림 서비스 제공</string>
    <string name="login_dialog_text5">선택적 접근 권한은 동의하지 않으셔도 앱 이용이 가능하며,\n비허용시에도 해당 기능 외 서비스 이용이 가능합니다.</string>
    <string name="login_dialog_text6">앱 권한설정은 설정>케키에서 변경 가능</string>
    <string name="login_dialog_check">확인</string>
    <string name="home_comment">베이님!\n투리 생일이 3일 남았어요.\n특별한 하루를 준비해요!</string>
    <string name="home_tag_one"># 생일</string>
    <string name="home_tag_two"># 친구</string>
    <string name="anniversary"># 기념일</string>
    <string name="home_store_name">가게 이름</string>
    <string name="store_feed">피드</string>
    <string name="store_feed_nick_name">닉네임</string>
    <string name="store_feed_cake_name">제품 이름</string>
    <string name="store_feed_cake_description">이 제품은 어쩌구\n케이크 어쩌구저쩌구어쩌구저쩌구어쩌구저쩌구어쩌구저쩌구어쩌구저쩌구</string>
    <string name="more_see">••• 더보기</string>
    <string name="report">사용자 신고</string>
    <string name="order_ui">주문 화면</string>
    <string name="order_finish">완료</string>
    <string name="order_seller_info">판매자 정보</string>
    <string name="order_seller_name">가게 이름</string>
    <string name="order_account">계좌</string>
    <string name="order_seller_account_info">100004264642 토스뱅크 홍길동</string>
    <string name="order_consumer_info">주문자 정보</string>
    <string name="order_name">성 함</string>
    <string name="order_call">연락처</string>
    <string name="order_consumer_name">홍 길 동</string>
    <string name="order_consumer_call">010-1234-1234</string>
    <string name="order_product_info">상품 정보</string>
    <string name="order_product_select">상품 선택</string>
    <string name="order_add_design">디자인 추가요금</string>
    <string name="order_pick_up_date">픽업 요청일</string>
    <string name="order_select_date">날짜를 선택해주세요.</string>
    <string name="order_request">요청사항</string>
    <string name="order_write_request">요청사항을 입력해주세요.(200자 이내)</string>
    <string name="order_add_img">첨부 사진(선택)</string>
    <string name="order_total_amount">주문 금액</string>
    <string name="order_total_amount_ex">30,000 원</string>
    <string name="order_product_amount">상품 금액</string>
    <string name="order_product_amount_ex">27,000 원</string>
    <string name="order_add_amount">추가 금액</string>
    <string name="order_add_amount_ex">3,000 원</string>
    <string name="order_product_context">주문 금액 확인 후,\n위의 가게 계좌로 송금 먼저 해주세요.</string>
    <string name="order_complete_txt">주문이 완료되었습니다</string>
    <string name="order_complete_thanks_txt">감사합니다 :-)</string>
    <string name="order_complete_ok">확인</string>
    <string name="order_complete_order_list">주문 내역</string>
    <string name="order_screen_example">왕딸기 케이크</string>
    <string name="order_screen_example_cost">+27,000원</string>
    <string name="order_list_number_waiting">1</string>
    <string name="order_list_waiting">주문 대기</string>
    <string name="order_list_number_making">2</string>
    <string name="order_list_making">제작 중</string>
    <string name="order_list_pick_up_waiting_number">3</string>
    <string name="order_list_pick_up_waiting">픽업 대기</string>
    <string name="order_list_all_history_number">4</string>
    <string name="order_list_all_history">전체 내역</string>
    <string name="order_list_store_name">가게 이름</string>
    <string name="order_list_consumer_name">소비자 이름</string>
    <string name="order_list_price_and_product">가게 | 제품이름</string>
    <string name="order_list_date">2023/12/31</string>
    <string name="store_feed_detail_product_name">제품 이름</string>
    <string name="dialog_report_title">신고하기</string>
    <string name="dialog_report_content">타당한 신고 사유를 선택해주세요.\n신고 사유에 맞지않은 신고를 했을경우,\n해당 신고는 처리되지 않습니다.</string>
    <string name="dialog_report_first">스팸홍보/도배</string>
    <string name="dialog_report_second">욕설/혐오/차별</string>
    <string name="dialog_report_third">음란물/유해한 정보</string>
    <string name="dialog_report_fourth">사기/불법정보</string>
    <string name="dialog_report_fifth">게시글 성격에 부적절함</string>
    <string name="dialog_delete_store_title">피드 삭제</string>
    <string name="dialog_delete_store_content">해당 피드를 삭제하시겠습니까?</string>
    <string name="dialog_delete_store_btn">삭제하기</string>
    <string name="dialog_delete_store_btn_none">취소</string>
    <string name="dialog_delete_store_feed">삭제</string>
    <string name="dialog_modify_store_feed">수정</string>
    <string name="store_main_store_name">가게이름</string>
    <string name="store_main_store_detail">가게설명입니다.</string>
    <string name="store_main_store_view_more">더보기.</string>
    <string name="store_main_store_order">주문하기</string>
    <string name="store_main_dialog_info">사업자정보</string>
    <string name="store_main_dialog_representative_name">대표자명</string>
    <string name="store_main_dialog_representative_name_data">케키</string>
    <string name="store_main_dialog_store_name">상호명</string>
    <string name="store_main_dialog_store_name_data">케키</string>
    <string name="store_main_dialog_store_address">사업자 주소</string>
    <string name="store_main_dialog_store_address_data">서울특별시 케키구 케키동 케키로 23가 107동</string>
    <string name="store_main_dialog_store_num">사업자 등록번호</string>
    <string name="store_main_dialog_store_num_data">케키</string>
    <string name="calendar_main_text">기념일</string>
    <string name="calendar_anniversary_title">기념일 제목</string>
    <string name="calendar_anniversary_date">20XX.XX.XX</string>
    <string name="calendar_anniversary_dday">D-XXXX</string>
    <string name="calendar_empty_list">추가된 기념일이 없습니다.</string>
    <string name="calendar_item_delete">삭제</string>
    <string name="calendar_detail_first_dday">D-DAY</string>
    <string name="calendar_detail_type">기념일 종류</string>
    <string name="calendar_detail_go_to_find_cake">딱 맞는 케이크 찾으러 가기</string>
    <string name="calendar_anniversary_add_main_text">기념일 추가</string>
    <string name="calendar_anniversary_add_dday">D-DAY</string>
    <string name="calendar_anniversary_type">기념일 종류</string>
    <string name="calendar_anniversary_type_dday">디데이</string>
    <string name="calendar_anniversary_type_number_of_days">날짜수</string>
    <string name="calendar_anniversary_type_repeat_every_year">매년 반복</string>
    <string name="calendar_add_anniversary_title">기념일 제목을 입력해주세요. (30자)</string>
    <string name="calendar_add_anniversary_date">날짜를 선택해주세요.</string>
    <string name="calendar_feed_add_anniversary_hashtag">아래 #해시태그를 선택해주세요.</string>
    <string name="calendar_feed_add_max_hashtag">해시태그는 최대 3개까지 등록할 수 있습니다.</string>
    <string name="calendar_add_completion">완료</string>
    <string name="calendar_add_error_no_select">필수 선택 항목입니다.</string>
    <string name="calendar_add_error_no_input">필수 입력 항목입니다.</string>
    <string name="calendar_non_consumer_like_comment">로그인 시 사용 가능한 기능입니다!</string>
    <string name="calendar_modify_main_text">기념일 수정</string>
    <string name="my_page_main_text">내 정보</string>
    <string name="my_page_non_main_comment">로그인이 필요합니다.</string>
    <string name="my_page_tv_nickname">님.</string>
    <string name="my_page_main_comment">오늘도 특별한 하루 보내세요!</string>
    <string name="my_page_account">계정 설정</string>
    <string name="my_page_profile_edit">프로필 편집</string>
    <string name="my_page_signup">회원가입</string>
    <string name="my_page_logout">로그아웃</string>
    <string name="my_page_widthdrawal">회원탈퇴</string>
    <string name="my_page_notification">알림 설정</string>
    <string name="my_page_push_notification">푸쉬 알림</string>
    <string name="my_page_app_info">앱 정보</string>
    <string name="my_page_notice">공지사항</string>
    <string name="my_page_app_condition">약관안내</string>
    <string name="my_page_personal_info">개인정보처리방침</string>
    <string name="my_page_tv_order_waiting">주문 대기</string>
    <string name="my_page_tv_order_in">제작중</string>
    <string name="my_page_tv_pickup_waiting">픽업 대기</string>
    <string name="my_page_tv_chevron_right_all">전체 내역</string>
    <string name="my_page_condition_comment_main">케키 서비스 이용약관</string>
    <string name="my_page_profile_edit_main">프로필 편집</string>
    <string name="my_page_profile_edit_complete">완료</string>
    <string name="my_page_profile_nick_name_condition">한글, 영어, 숫자만 사용할 수 있어요. (최대 10자)</string>
    <string name="my_page_profile_nick_name_hint">닉네임을 입력해주세요.</string>
    <string name="my_page_profile_nick_name_overlap">중복확인</string>
    <string name="notice_main">공지사항</string>
    <string name="notice_text">새로운 디저트가 등록되었어요!</string>
    <string name="notice_detail_main">새로운 디저트가 등록되었어요! 어서 확인해보세요!</string>
    <string name="notice_detail_text">새로운 디저트가 등록되었어요!</string>
    <string name="tv_recent_search">최근 검색어</string>
    <string name="tv_recent_search_delete">전체 지우기</string>
    <string name="tv_popular_search">인기 검색어</string>
    <string name="tv_recent_view">최근 본 케이크</string>
    <string name="search_spinner_recent">최신순</string>
    <string name="search_spinner_popular">인기순</string>
    <string name="search_spinner_price">가격낮은순</string>
    <string name="search_empty_list">검색결과가 없습니다.</string>
    <string name="like_main_text">좋아요</string>
    <string name="like_tv_product_name">상품명</string>
    <string name="like_tv_product_price">00,000</string>
    <string name="like_empty_list">좋아요한 케이크가 없습니다.</string>
    <string name="dialog_logout_title">로그아웃</string>
    <string name="logout_tv_content">로그아웃 하시겠습니까?</string>
    <string name="logout_tv_cancel">취소</string>
    <string name="logout_tv_logout">로그아웃</string>
    <string name="dialog_withdrawal_title">회원탈퇴</string>
    <string name="withdrawal_tv_content">정말 케키와 헤어지실 건가요?\n정말요? 진짜요?\n(해당 이메일로 재가입은 불가합니다.)</string>
    <string name="withdrawal_tv_cancel">취소</string>
    <string name="withdrawal_tv_withdrawal">탈퇴하기</string>
    <string name="tv_seller_profile_setting_title">판매자 프로필 설정</string>
    <string name="tv_seller_profile_edit_title">프로필 편집</string>
    <string name="seller_profile_setting_tv1">사업자정보</string>
    <string name="seller_profile_setting_et1">가게이름을 입력해주세요.</string>
    <string name="seller_profile_setting_et2">가게주소를 입력해주세요.</string>
    <string name="seller_profile_setting_et3">간단히 가게를 소개해주세요. (최대 100자)</string>
    <string name="seller_profile_setting_et4">가게계좌/예금주명을 입력해주세요.</string>
    <string name="seller_profile_setting_et5">사업자 정보를 입력해주세요.</string>
    <string name="seller_profile_setting_et6">대표자명을 입력해주세요.</string>
</resources>