<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/csl_dialog"
        android:layout_width="@dimen/dialog_access_width"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rectangle_radius_10_white_no_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:id="@+id/tv_mainName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_access_mainName_marginTop"
            android:gravity="center"
            android:fontFamily="@font/notosanskr_bold"
            android:text="@string/login_dialog_main"
            android:textSize="@dimen/dialog_title_size"
            android:textColor="@color/black"
            android:includeFontPadding="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_subName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_access_subName_marginTop"
            android:fontFamily="@font/notosanskr_regular"
            android:textColor="@color/black"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/login_dialog_sub"
            android:textSize="@dimen/dialog_sub_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_mainName" />


        <TextView
            android:id="@+id/tv_text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_access_tv1_marginTop"
            android:fontFamily="@font/notosanskr_bold"
            android:textColor="@color/black"
            android:includeFontPadding="false"
            android:text="@string/login_dialog_text1"
            android:textSize="@dimen/dialog_sub_size"
            android:layout_marginLeft="@dimen/dialog_access_tv_marginLeft"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_subName" />


        <TextView
            android:id="@+id/tv_text_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/notosanskr_regular"
            android:textColor="@color/black"
            android:includeFontPadding="false"
            android:text="@string/login_dialog_text2"
            android:textSize="@dimen/dialog_sub_size"
            android:layout_marginLeft="@dimen/dialog_access_tv_marginLeft"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_text_1" />

        <TextView
            android:id="@+id/tv_text_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_access_tv3_marginTop"
            android:fontFamily="@font/notosanskr_bold"
            android:textColor="@color/black"
            android:includeFontPadding="false"
            android:text="@string/login_dialog_text3"
            android:textSize="@dimen/dialog_sub_size"
            android:layout_marginLeft="@dimen/dialog_access_tv_marginLeft"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_text_2" />


        <TextView
            android:id="@+id/tv_text_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/notosanskr_regular"
            android:textColor="@color/black"
            android:includeFontPadding="false"
            android:text="@string/login_dialog_text4"
            android:textSize="@dimen/dialog_sub_size"
            android:layout_marginLeft="@dimen/dialog_access_tv_marginLeft"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_text_3" />

        <TextView
            android:id="@+id/tv_text_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_access_tv5_marginTop"
            android:layout_marginLeft="@dimen/dialog_access_tv_marginLeft"
            android:fontFamily="@font/notosanskr_regular"
            android:textColor="@color/black"
            android:includeFontPadding="false"
            android:text="@string/login_dialog_text5"
            android:textSize="@dimen/dialog_sub_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_text_4" />

        <TextView
            android:id="@+id/tv_text_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_access_tv6_marginTop"
            android:layout_marginLeft="@dimen/dialog_access_tv_marginLeft"
            android:fontFamily="@font/notosanskr_regular"
            android:textColor="@color/black"
            android:includeFontPadding="false"
            android:text="@string/login_dialog_text6"
            android:textSize="@dimen/dialog_sub_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_text_5" />

        <Button
            android:id="@+id/btn_check1"
            android:layout_width="@dimen/dialog_access_btn_width"
            android:layout_height="@dimen/dialog_access_btn_height"
            android:background="@drawable/bg_rectangle_radius_20_darkish_pink"
            android:text="@string/login_dialog_check"
            android:textColor="@color/white"
            android:textSize="@dimen/dialog_btn_text_size"
            android:includeFontPadding="false"
            android:fontFamily="@font/notosanskr_bold"
            android:layout_marginTop="@dimen/dialog_access_btn_marginTop"
            android:layout_marginBottom="@dimen/dialog_access_btn_marginBottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_text_6"
            app:layout_constraintBottom_toBottomOf="@+id/csl_dialog"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>