<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".src.main.consumer.store.order.finish.ConsumerOrderCompleteActivity">

    <ImageView
        android:id="@+id/iv_order_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_finish_order"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/order_complete_img_margin_top"/>

    <TextView
        android:id="@+id/tv_order_complete_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_complete_txt"
        android:includeFontPadding="false"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/iv_order_complete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/order_complete_txt_margin_top"
        android:fontFamily="@font/notosanskr_bold"
        android:textSize="@dimen/order_complete_txt_size"/>

    <TextView
        android:id="@+id/tv_order_complete_thanks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_complete_thanks_txt"
        android:includeFontPadding="false"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/tv_order_complete_comment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/order_complete_txt_margin_top"
        android:fontFamily="@font/notosanskr_regular"
        android:textSize="@dimen/order_complete_thanks_txt_size"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/order_complete_btn_margin_bottom"
        android:gravity="center">
        <TextView
            android:id="@+id/tv_order_complete_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_complete_ok"
            android:background="@drawable/bg_rectangle_radius_10_light_pink_no_padding"
            android:textColor="@color/black"
            android:textSize="@dimen/order_complete_thanks_txt_size"
            android:fontFamily="@font/notosanskr_bold"
            android:includeFontPadding="false"
            android:paddingHorizontal="@dimen/order_complete_ok_btn_padding_horizontal"
            android:paddingVertical="@dimen/order_complete_ok_btn_padding_vertical"
            />

        <TextView
            android:id="@+id/tv_order_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_complete_order_list"
            android:background="@drawable/bg_rectangle_radius_10_light_pink_no_padding"
            android:layout_marginStart="@dimen/order_complete_btn_margin_start_end"
            android:textColor="@color/black"
            android:textSize="@dimen/order_complete_thanks_txt_size"
            android:fontFamily="@font/notosanskr_bold"
            android:includeFontPadding="false"
            android:paddingHorizontal="@dimen/order_list_btn_padding_horizontal"
            android:paddingVertical="@dimen/order_complete_ok_btn_padding_vertical"
            />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>